# fastreg

./: README.md  benchmark.ipynb  design.py  general.py  genjax.py  keras.py  linear.py  pyproject.toml  requirements.txt  setup.py  testing.ipynb  testing.py  tools.py
fastreg/: __init__.py  design.py  formula.py  general.py  linear.py  meta.py  summary.py  testing.py  tools.py  trees.py
fastreg/tests/: conftest.py  test_formula.py  test_general.py  test_linear.py
